--- a/index.html
+++ b/index.html
@@ -9,40 +9,51 @@
 </head>
 <body>
 <header class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Ian N. Astesana</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active float-right">
-              <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item float-right">
-              <a class="nav-link float-right" href="#">Portfolio</a>
-            </li>
-            <li class="nav-item float-right">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Who I am
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Core Values</a>
-                <a class="dropdown-item" href="#">Personal Intrests</a>
-                <a class="dropdown-item" href="#">Challenges</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark text-light" id="navbar">
+
+    <h1 class="text-light col-xs-4 mr-auto">Ian N. Astesana</h1>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse col-xs-5" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+
+        <li class="nav-item active" >
+          <a class="nav-link" id="hhp0" href="./index.html">About<span class="sr-only">(current)</span></a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" id="hhp1" href="./portfolio.html">Portfolio</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" id="hhp2" href="./contact.html">Contacts</a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
 </header>
+
+<div class="container-fluid p-5">
+      <div class="row ">
+        <div class="col-2 "></div>
+        <div class="col-6 text-sm-l" style="background-color: grey">
+          <h1 class="text-light border-bottom" style="margin: 10px;">About Me</h1>
+
+          <p class="text-light" style="margin: 10px;font-size: 1.5rem;"><img class="img-fluid float-left" src="./assets/images/snowboarding.jpeg" alt="" style="margin: 10px;">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid est doloribus quam, aspernatur qui aut rerum suscipit dolores a reiciendis fuga tempora porro itaque illum magnam perferendis esse excepturi soluta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim veritatis vitae veniam voluptatum excepturi, optio cupiditate laboriosam id perferendis qui aliquam ex unde necessitatibus. Vel fugit non hic recusandae.
+          </p>
+          <p class="text-light" style="margin: 10px;font-size: 1.5rem;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsum accusantium aperiam dolores deserunt quam enim. Vitae exercitationem quis eius? Fugit error quos dolore exercitationem quo quidem sequi aliquid tenetur!</p>
+        </div>
+      </div>
+</div>
     
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
