--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Custom CSS link -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <!-- Personal favorite flavicon -->
+    <link rel="icon" type="image/png" href="./assets/images/kapow.png">
+    <title>Ian A. | About me</title>
   </head>
   <body>
 
