--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <title>Ian A. | About me</title>
   </head>
   <body>
-
   <!-- Header Start -->
   <header class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
@@ -43,10 +42,12 @@
             <div class="col-xs-4  col-md-8 col-xl-8 m-auto text-sm-l" style="background-color: grey">
               <h1 class="text-light border-bottom" style="margin: 10px;">About Me</h1>
               <p class="text-light" style="margin: 10px;font-size: 1.2rem;"><img class="img-fluid float-left" src="./assets/images/snowboarding.png" alt="" style="margin: 10px;">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid est doloribus quam, aspernatur qui aut rerum suscipit dolores a reiciendis fuga tempora porro itaque illum magnam perferendis esse excepturi soluta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim veritatis vitae veniam voluptatum excepturi, optio cupiditate laboriosam id perferendis qui aliquam ex unde necessitatibus. Vel fugit non hic recusandae.
+                Ian N. Astesana: I am a freelance Full Stack Web Developer. I took a web development class through UC Davis, and applied the skills I learned to become a successful free lance Web Developer. Previous experience has included a Manager at Whole Foods Market, and 5+ years as the Head Tech Support Representative at Immigrant Software Corp.
               </p>
-              <p class="text-light" style="margin: 10px;font-size: 1.2rem;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsum accusantium aperiam dolores deserunt quam enim. Vitae exercitationem quis eius? Fugit error quos dolore exercitationem quo quidem sequi aliquid tenetur!</p>
-            </div>
+              <p class="text-light" style="margin: 10px;font-size: 1.2rem;">
+                I believe that diligince, empathy, and colaboration are the building blocks for success. As a natural born leader you need to have and use those three things to be successful at anything. The core beliefe that resonated with me over the years came from Whole Foods. Employee happiness. Though a slightly different environment, it still resonates because someone with all of their basic needs met will produce far better work than someone who lives in fear.
+              </p>
+              </div>
           </div>
     </article>
   <!-- End Article -->
