--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
 
 <!-- Footer Start -->
 <div class="containter">
-  <footer class="footer bg-dark text-light">
+  <footer class="footer bg-dark text-light" id="sf">
     <div class="container p-2" style="margin-top: auto;">
 
       <!-- Copyright start -->
@@ -131,7 +131,7 @@
         <h4>&copy; Copyright 2020</h4>
       </div>
       <!-- Copyright end -->
-
+      
     </div>
   </footer>
 </div>
