Made a real  README.MD.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   <!-- Article Start -->
     <article class="container-fluid p-5">
           <div class="row">
-            <div class="col-xs-4  col-md-8 col-xl-8 m-auto text-sm-l" style="background-color: grey">
+            <div class="col-xs-4 col-s-5  col-md-6 col-xl-8 m-auto text-sm-l" style="background-color: grey">
               <h1 class="text-light border-bottom" style="margin: 10px;">About Me</h1>
-              <p class="text-light" style="margin: 10px;font-size: 1.2rem;"><img class="img-fluid float-left" src="./assets/images/snowboarding.png" alt="" style="margin: 10px;">
+              <p class="text-light" style="margin: 10px;font-size: 1.2rem;"><img class="img-fluid float-left" src="./assets/images/snowboarding.png" alt="snowboarding" style="margin: 10px;">
                 Ian N. Astesana: I am a freelance Full Stack Web Developer. I took a web development class through UC Davis, and applied the skills I learned to become a successful free lance Web Developer. Previous experience has included a Manager at Whole Foods Market, and 5+ years as the Head Tech Support Representative at Immigrant Software Corp.
               </p>
               <p class="text-light" style="margin: 10px;font-size: 1.2rem;">
