--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
   <article class="container-fluid p-5">
     <!-- Start of first row -->
     <div class="row">
-      <div class="text-sm-l p-2 col-xl-5 col-md-6  col-xs-5 mr-auto" style="background-color: grey;">
+      <div class="text-sm-l p-2 col-xl-5 col-md-6 col-xs-5 mr-auto" style="background-color: grey;">
           <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" style="width: 100%; height: 100%;">
             <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4">
           </video>
@@ -122,7 +122,7 @@
   <!-- End Article -->
 
 <!-- Footer Start -->
-<div class="containter">
+<div class="container">
   <footer class="footer bg-dark text-light" id="sf">
     <div class="container p-2" style="margin-top: auto;">
 
