Pushing final project. Will likely need to look at col's

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <title>Ian A. | Contact Me</title>
 </head>
 <body>
-    <!-- Header Start -->
+  <!-- Header Start -->
   <header class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <a class="navbar-brand text-light" href="./index.html"><h1>Ian N. Astesana</h1></a>
@@ -36,7 +36,7 @@
   </header>
   <!-- Header End -->
 
-<div class="bg-dark text-light col-xl-8 m-auto"><h1 class="text-light border-bottom" style="margin: 10px;">Contact</h1>
+<div class="bg-dark text-light m-auto col-xl-6 col-md-10 col-sm-10"><h1 class="text-light border-bottom" style="margin: 10px;">Contact</h1>
       <!--Section: Contact v.2-->
 <section class="mb-4">
 
@@ -125,7 +125,7 @@
 </div>
 
   <!-- Footer Start -->
-  <div class="containter">
+  <footer>
     <footer class="footer bg-dark text-light" id="sf">
       <div class="container p-2" style="margin-top: auto;">
   
@@ -137,7 +137,7 @@
         
       </div>
     </footer>
-  </div>
+  </footer>
   <!-- Footer End -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
