--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="./assets/images/kapow.png">
     <title>Ian A. | About me</title>
   </head>
+
   <body>
   <!-- Header Start -->
   <header class="container">
@@ -37,40 +38,39 @@
   <!-- Header End -->
 
   <!-- Article Start -->
-    <article class="container-fluid p-5">
+    <article class="container-fluid col-xl-6 col-md-10 col-sm-10 pt-5">
           <div class="row">
-            <div class="col-xs-4 col-s-5  col-md-6 col-xl-8 m-auto text-sm-l" style="background-color: grey">
+            <div class="m-auto text-sm-l" style="background-color: grey">
               <h1 class="text-light border-bottom" style="margin: 10px;">About Me</h1>
               <p class="text-light" style="margin: 10px;font-size: 1.2rem;"><img class="img-fluid float-left" src="./assets/images/snowboarding.png" alt="snowboarding" style="margin: 10px;">
-                Ian N. Astesana: I am a freelance Full Stack Web Developer. I took a web development class through UC Davis, and applied the skills I learned to become a successful free lance Web Developer. Previous experience has included a Manager at Whole Foods Market, and 5+ years as the Head Tech Support Representative at Immigrant Software Corp.
+                Ian N. Astesana: Is a freelance Full Stack Web Developer. He took a web development class through UC Davis, and applied his skills to become a successful freelance Web Developer. Previous experience has included a Manager at Whole Foods Market, and 5+ years as the Head Tech Support Representative at Immigrant Software Corp.
               </p>
               <p class="text-light" style="margin: 10px;font-size: 1.2rem;">
-                I believe that diligince, empathy, and colaboration are the building blocks for success. As a natural born leader you need to have and use those three things to be successful at anything. The core beliefe that resonated with me over the years came from Whole Foods. Employee happiness. Though a slightly different environment, it still resonates because someone with all of their basic needs met will produce far better work than someone who lives in fear.
+                Diligince, empathy, and colaboration are the building blocks for success. As a natural born leader one must have and use those three philosophies to be successful. Whole foods had a list of core beliefs that ranged from health, wealth, and employee happiness. To farm to home quality; however, the most important core belief in a workplace is employee happiness. Building trust on a team is critical to success.
               </p>
               </div>
           </div>
     </article>
   <!-- End Article -->
 
-<!-- Footer Start -->
-<div class="containter">
-  <footer class="footer bg-dark text-light" id="sf">
-    <div class="container p-2" style="margin-top: auto;">
+  <!-- Footer Start -->
+  <footer>
+    <footer class="footer bg-dark text-light" id="sf">
+      <div class="container p-2" style="margin-top: auto;">
 
-      <!-- Copyright start -->
-      <div class="float-right">
-        <h4>&copy; Copyright 2020</h4>
+        <!-- Copyright start -->
+        <div class="float-right">
+          <h4>&copy; Copyright 2020</h4>
+        </div>
+        <!-- Copyright end -->
+
       </div>
-      <!-- Copyright end -->
-      
-    </div>
+    </footer>
   </footer>
-</div>
-<!-- Footer End -->
+  <!-- Footer End -->
  
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
-
 </html>
