--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
   <body>
   <!-- Header Start -->
-  <header class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<header class="container col-xl-10 col-md-10 col-sm-10">
+  <div class="row">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark col-12">
       <a class="navbar-brand text-light" href="./index.html"><h1>Ian N. Astesana</h1></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon bg-light"></span>
@@ -34,17 +35,25 @@
         </ul>
       </div>
     </nav>
+  </div>
   </header>
   <!-- Header End -->
 
   <!-- Article Start -->
-    <article class="container-fluid col-xl-6 col-md-10 col-sm-10 pt-5">
+    <article class="container-fluid col-xl-10 col-md-10 col-sm-10 pt-5">
           <div class="row">
             <div class="m-auto text-sm-l" style="background-color: grey">
               <h1 class="text-light border-bottom" style="margin: 10px;">About Me</h1>
-              <p class="text-light" style="margin: 10px;font-size: 1.2rem;"><img class="img-fluid float-left" src="./assets/images/snowboarding.png" alt="snowboarding" style="margin: 10px;">
+              <p class="text-light" style="margin: 10px;font-size: 1.2rem;"><img class="img-fluid float-left" src="./assets/images/snow.jpg" alt="icicle" style="margin: 10px;">
                 Ian N. Astesana: Is a freelance Full Stack Web Developer. He took a web development class through UC Davis, and applied his skills to become a successful freelance Web Developer. Previous experience has included a Manager at Whole Foods Market, and 5+ years as the Head Tech Support Representative at Immigrant Software Corp.
               </p>
+              </div>
+          </div>
+    </article>
+
+  <article class="container col-xl-10 col-md-10 col-sm-10">
+            <div class="row">
+              <div class="m-auto text-sm-l" style="background-color: grey">
               <p class="text-light" style="margin: 10px;font-size: 1.2rem;">
                 Diligince, empathy, and colaboration are the building blocks for success. As a natural born leader one must have and use those three philosophies to be successful. Whole foods had a list of core beliefs that ranged from health, wealth, and employee happiness. To farm to home quality; however, the most important core belief in a workplace is employee happiness. Building trust on a team is critical to success.
               </p>
