Made same changes on Port and contact.

--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,10 @@
     <title>Ian A. | Contact Me</title>
 </head>
 <body>
-  <!-- Header Start -->
-  <header class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <!-- Header Start -->
+<header class="container col-xl-10 col-md-10 col-sm-10">
+  <div class="row">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark col-12">
       <a class="navbar-brand text-light" href="./index.html"><h1>Ian N. Astesana</h1></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon bg-light"></span>
@@ -33,10 +34,11 @@
         </ul>
       </div>
     </nav>
+  </div>
   </header>
   <!-- Header End -->
 
-<div class="bg-dark text-light m-auto col-xl-6 col-md-10 col-sm-10"><h1 class="text-light border-bottom" style="margin: 10px;">Contact</h1>
+<div class="bg-dark text-light m-auto col-xl-10 col-md-10 col-sm-10"><h1 class="text-light border-bottom" style="margin: 10px;">Contact</h1>
       <!--Section: Contact v.2-->
 <section class="mb-4">
 
