--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- Header Start -->
-  <header class="container">
+  <header class="container col-xl-10 col-md-10 col-sm-10">
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <a class="navbar-brand text-light" href="./index.html"><h1>Ian N. Astesana</h1></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
   <!-- Header End -->
 
   <!-- Article Start -->
-<div class="container-fluid col-xl-10"><h1 class="text-light border-bottom" style="margin: 1px;">Portfolio</h1>
+<div class="container-fluid col-xl-10 col-md-10 col-sm-10"><h1 class="text-light border-bottom" style="margin: 1px;">Portfolio</h1>
   <article class="container-fluid pt-5">
     <!-- Start of first row -->
     <div class="row">
