--- a/portfolio.html
+++ b/portfolio.html
@@ -15,27 +15,29 @@
 
   <!-- Header Start -->
   <header class="container col-xl-10 col-md-10 col-sm-10">
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <a class="navbar-brand text-light" href="./index.html"><h1>Ian N. Astesana</h1></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon bg-light"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" id="hhp0" href="./index.html">About<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="hhp1" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="hhp2" href="./contact.html">Contact</a>
-          </li> 
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <!-- Header End -->
+    <div class="row">
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark col-12">
+        <a class="navbar-brand text-light" href="./index.html"><h1>Ian N. Astesana</h1></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon bg-light"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" id="hhp0" href="./index.html">About<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="hhp1" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="hhp2" href="./contact.html">Contact</a>
+            </li> 
+          </ul>
+        </div>
+      </nav>
+    </div>
+    </header>
+    <!-- Header End -->
 
   <!-- Article Start -->
 <div class="container-fluid col-xl-10 col-md-10 col-sm-10"><h1 class="text-light border-bottom" style="margin: 1px;">Portfolio</h1>
